--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,18 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="Android.permission.NFC" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <uses-feature
         android:name="android.hardware.nfc"
         android:required="true" />
+    <uses-feature
+        android:name="android.hardware.bluetooth_le"
+        android:required="false" />
+
+    <uses-feature android:name="android.hardware.location.gps" />
 
     <application
         android:name=".MyApplication"
@@ -32,18 +40,22 @@
             android:name=".services.AidlService"
             android:process=":remote" />
 
-        <activity android:name=".activity.NfcActivity"
+        <activity
+            android:name=".activity.NfcActivity"
+            android:alwaysRetainTaskState="true"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait"
-            android:alwaysRetainTaskState="true">
-            <!--<meta-data android:name="android.nfc.action.Tec"-->
+            android:screenOrientation="portrait">
+
+            <!-- <meta-data android:name="android.nfc.action.Tec" -->
             <intent-filter>
                 <action android:name="android.nfc.action.TECH_DISCOVERED" />
                 <action android:name="android.nfc.action.TAG_DISCOVERED" />
-                <category android:name="android.intent.category.DEFAULT" />
 
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            </activity>
+        </activity>
+
+        <activity android:name=".activity.BluetoothActivity" />
     </application>
 
 </manifest>
