--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.pft.liuxiaofeng.nbajames"
-        minSdkVersion 18
+        minSdkVersion 21
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -44,12 +44,13 @@ dependencies {
     })
     //    compile 'com.squareup.retrofit2:retrofit-adapters:2.3.0'
     //    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    //最新版本
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.squareup.retrofit2:converter-gson:2.0.1'
-    compile 'com.squareup.okhttp3:okhttp:3.8.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
@@ -62,8 +63,7 @@ dependencies {
     compile 'com.didi.virtualapk:core:0.9.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.romainguy:ViewServer:017c01cd512cac3ec054d9eee05fc48c5a9d2de'
-    testCompile 'junit:junit:4.12'
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
-    compile 'com.youth.banner:banner:1.4.10'  //最新版本
+    compile 'com.youth.banner:banner:1.4.10'
     compile 'com.android.support:cardview-v7:22.2.1'
+    testCompile 'junit:junit:4.12'
 }
