tinker修复接入项目

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.2'
         classpath 'com.didi.virtualapk:gradle:0.9.0'
+        classpath ('com.tencent.tinker:tinker-patch-gradle-plugin:1.9.1') //tinker接入
+        classpath 'com.meituan.android.walle:plugin:1.1.6'//walle接入
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -24,3 +26,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
