--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,9 @@ apply plugin: 'com.didi.virtualapk.host'
 apply plugin: 'walle'
 walle {
     // 指定渠道包的输出路径
-    apkOutputFolder = new File("${project.buildDir}/outputs/channels");
+    apkOutputFolder = new File("${project.buildDir}/outputs/channels")
     // 定制渠道包的APK的文件名称
-    apkFileNameFormat = '${appName}-${packageName}-${channel}-${buildType}-v${versionName}-${versionCode}-${buildTime}.apk';
+    apkFileNameFormat = '${appName}-${packageName}-${channel}-${buildType}-v${versionName}-${versionCode}-${buildTime}.apk'
     // 渠道配置文件
     channelFile = new File("${project.getProjectDir()}/channel")
 }
@@ -40,11 +40,10 @@ dependencies {
     compile 'com.youth.banner:banner:1.4.10'
     compile 'com.android.support:cardview-v7:22.2.1'
     testCompile 'junit:junit:4.12'
-
     //可选，用于生成application类
-    provided('com.tencent.tinker:tinker-android-anno:1.9.8')
+    provided 'com.tencent.tinker:tinker-android-anno:1.9.8'
     //tinker的核心库
-    compile('com.tencent.tinker:tinker-android-lib:1.9.8')
+    compile 'com.tencent.tinker:tinker-android-lib:1.9.8'
     compile 'com.meituan.android.walle:library:1.1.6'
 }
 
@@ -62,7 +61,7 @@ def gitSha() {
 
 def javaVersion = JavaVersion.VERSION_1_7
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion '26.0.2'
     compileOptions {
         sourceCompatibility javaVersion
