--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,14 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
+        maven { url "https://maven.google.com" }
+        mavenCentral()
         jcenter()
-//        mavenCentral()
-//        maven { url 'https://maven.google.com' }
-        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.2'
-        classpath 'com.didi.virtualapk:gradle:0.9.0'
         classpath ('com.tencent.tinker:tinker-patch-gradle-plugin:1.9.1') //tinker接入
         classpath 'com.meituan.android.walle:plugin:1.1.6'//walle接入
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+
     }
 }
 
