--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,30 +12,32 @@ walle {
     channelFile = new File("${project.getProjectDir()}/channel")
 }
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
-    compile 'com.android.support:appcompat-v7:28.0.0'
-    compile 'com.squareup.retrofit2:retrofit:2.4.0'
-    compile 'com.google.code.gson:gson:2.8.5'
-    compile 'com.squareup.retrofit2:converter-gson:2.4.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    compile 'io.reactivex.rxjava2:rxjava:2.2.3'
-    compile 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    compile 'com.android.support:support-v4:28.0.0'
-    compile 'com.android.support:recyclerview-v7:28.0.0'
-    compile 'com.android.support:design:28.0.0'
-    compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
-    compile 'com.github.bumptech.glide:glide:4.8.0'
-    compile 'com.github.romainguy:ViewServer:017c01cd512cac3ec054d9eee05fc48c5a9d2de'
-    compile 'com.youth.banner:banner:1.4.10'
-    compile 'com.android.support:cardview-v7:28.0.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.github.romainguy:ViewServer:017c01cd512cac3ec054d9eee05fc48c5a9d2de'
+    implementation 'com.youth.banner:banner:1.4.10'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     //可选，用于生成application类
-    provided 'com.tencent.tinker:tinker-android-anno:1.9.8'
+    //    api 'com.tencent.tinker:tinker-android-anno:1.9.8'
     //tinker的核心库
-    compile 'com.tencent.tinker:tinker-android-lib:1.9.8'
-    compile 'com.meituan.android.walle:library:1.1.6'
+    //    implementation 'com.tencent.tinker:tinker-android-lib:1.9.8'
+    //    implementation 'com.meituan.android.walle:library:1.1.6'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
+    // Optional, if you use support library fragments:
+    debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.3'
+    implementation project(':commonsdk')
 }
 
 def gitSha() {
@@ -90,7 +92,7 @@ android {
         /**
          * you can use multiDex and install it in your ApplicationLifeCycle implement
          */
-        multiDexEnabled true
+//        multiDexEnabled true
         buildConfigField "String", "MESSAGE", "\"I am the base apk\""
 //        buildConfigField "String", "MESSAGE", "\"I am the patch apk\""
         /**
