--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 buildscript {
     repositories {
         maven { url "https://maven.google.com" }
+        maven { url "https://jitpack.io" }
         mavenCentral()
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:3.1.4'
         classpath ('com.tencent.tinker:tinker-patch-gradle-plugin:1.9.1') //tinker接入
         classpath 'com.meituan.android.walle:plugin:1.1.6'//walle接入
-
     }
 }
 
