--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation project(':commonsdk')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.blankj:utilcode:1.22.10'
+    implementation 'io.netty:netty-all:4.1.41.Final'
     implementation project(':testdemo')
 }
 
@@ -77,7 +78,6 @@ def gitSha() {
 def javaVersion = JavaVersion.VERSION_1_7
 android {
     compileSdkVersion 28
-    buildToolsVersion '28.0.2'
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
