delete ignore content

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,18 @@
+.gitignore
+*.apk
+.akconfig
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.idea
+.akconfig
+.DS_Store
 /build
+/captures
+.externalNativeBuild
+/test
+/gradle/wrapper
+iot_homemate/build/
+/*/build/
